Handle HW encoder errors in VideoTrackRecorder

This CL adds callback to propagate errors from VEAEncoder to VideoTrackRecorder
so that the recording session can be reinitialized.

BUG=676424
TEST=Added unittest. WebRTC quality browser tests now pass on Mac H264.

Review-Url: https://codereview.chromium.org/2804843002
Cr-Commit-Position: refs/heads/master@{#462366}

Former-commit-id: 75762009cfc628424a8af508b91418ce912e0506