content/renderer/media_recorder/video_track_recorder_unittest.cc
@@ -119,8 +119,14 @@ class VideoTrackRecorderTest
     video_track_recorder_->OnVideoFrameForTesting(frame, capture_time);
   }
 
+  void OnError() { video_track_recorder_->OnError(); }
+
   bool CanEncodeAlphaChannel() {
     return video_track_recorder_->CanEncodeAlphaChannelForTesting();
+  }
+
+  bool HasEncoderInstance() {
+    return video_track_recorder_->encoder_.get() != nullptr;
   }
 
   // A ChildProcess and a MessageLoopForUI are both needed to fool the Tracks
@@ -288,6 +294,33 @@ TEST_F(VideoTrackRecorderTest, ForceKeyframeOnAlphaSwitch) {
   EXPECT_EQ(first_frame_encoded_alpha.size(), kEmptySize);
   EXPECT_GT(second_frame_encoded_alpha.size(), kEmptySize);
   EXPECT_GT(third_frame_encoded_alpha.size(), kEmptySize);
+
+  Mock::VerifyAndClearExpectations(this);
+}
+
+// Inserts an OnError() call between sent frames.
+TEST_F(VideoTrackRecorderTest, HandlesOnError) {
+  InitializeRecorder(VideoTrackRecorder::CodecId::VP8);
+
+  const gfx::Size& frame_size = kTrackRecorderTestSize[0];
+  const scoped_refptr<VideoFrame> video_frame =
+      VideoFrame::CreateBlackFrame(frame_size);
+
+  InSequence s;
+  EXPECT_CALL(*this, DoOnEncodedVideo(_, _, _, _, true)).Times(1);
+  Encode(video_frame, base::TimeTicks::Now());
+
+  EXPECT_TRUE(HasEncoderInstance());
+  OnError();
+  EXPECT_FALSE(HasEncoderInstance());
+
+  base::RunLoop run_loop;
+  base::Closure quit_closure = run_loop.QuitClosure();
+  EXPECT_CALL(*this, DoOnEncodedVideo(_, _, _, _, true))
+      .Times(1)
+      .WillOnce(RunClosure(quit_closure));
+  Encode(video_frame, base::TimeTicks::Now());
+  run_loop.Run();
 
   Mock::VerifyAndClearExpectations(this);
 }
